# ContentFlow-AI

./: .dockerignore  .env.example  .gitignore  ASYNC_JOB_PROCESSING_IMPLEMENTATION.md  AUTHENTICATION_SYSTEM.md  AWS_ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  ORCHESTRATOR_IMPLEMENTATION.md  README.md  SPECIALIZED_ENGINE_ENDPOINTS.md  STARTUP_GUIDE.md  check_secret_key.py  demo_job_processing.py  demo_orchestrator.py  docker-compose.prod.yml  docker-compose.yml  fix_content_paths.py  pyproject.toml  requirements.txt  simple_job_demo.py  test_gemini_models.py  test_jwt_token.py
.kiro/settings/: mcp.json
app/: __init__.py  main.py
app/ai/: __init__.py  audio_generation_engine.py  creative_assistant_engine.py  discovery_analytics_engine.py  image_generation_engine.py  orchestrator.py  social_media_planner.py  text_intelligence_engine.py  video_pipeline_engine.py
frontend/: Dockerfile.prod  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
nginx/: nginx.conf
scripts/: init-mongo.js
tests/: conftest.py  test_audio_generation_engine.py  test_auth_service.py  test_content_endpoints.py  test_content_parser.py  test_content_versioning.py  test_core_models.py  test_cost_tracking.py  test_creative_assistant_engine.py  test_discovery_analytics_engine.py  test_engine_endpoints.py  test_image_generation_engine.py  test_job_processor.py  test_main.py  test_orchestrator.py  test_orchestrator_engine_integration.py  test_orchestrator_integration.py  test_social_media_planner.py  test_text_intelligence_engine.py  test_video_pipeline_engine.py
(+62 files in other folders)
